--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,5 +1,5 @@
 = render :partial => 'layouts/head'
-%body
+%body{onload: "iframe_resize()"}
   #sidewinder-wrapper
 
     -# Render railsContext here before any react component gets rendered
