--- a/app/views/layouts/index.haml
+++ b/app/views/layouts/index.haml
@@ -13,7 +13,7 @@
         .container
           .row
             .col-md-12.col-sm-12.col-xs-12
-              .cart-area.admin-menu-panel.penal-wrap
+              .cart-area.penal-wrap.admin-menu-panel
                 .row
                   .col-md-6.col-sm-6.col-xs-6
                     %ul
@@ -267,59 +267,3 @@
     background: #a64c5d;
     color: white;
   }
-
-/   #header {
-/     padding: 0 0 0;
-/     margin: 0 0 50px;
-/   }
-/   #header .navbar {
-/     margin: 0;
-/   }
-/   .header-top {
-/     width: 100%;
-/     float: left;
-/     position: inherit;
-/     overflow: inherit;
-/   }
-/   #header .navbar-right {
-/     margin-right: 31px;
-/     margin-top: 19px;
-/   }
-/   .cart-area {
-/     float: right;
-/     font-family: 'Helvetica';
-/     font-size: 12px;
-/     padding: 0 0 0 0;
-/     text-align: right;
-/   }
-/   .top-navarea .login-menu .login-btn {
-/     color: #fff !important;
-/   }
-/   .top-navarea .open>.dropdown-toggle.btn-default:focus {
-/     color: #fff !important;
-/   }
-/   .top-navarea .open>.dropdown-toggle.btn-default:hover {
-/     color: #fff !important;
-/   }
-/   .left-navarea .dropdown-menu{
-/     top: 39px;
-/   }
-
-/   .header-p-5 .form-control {
-/     height: 38px;
-/     border-right: 0;
-/     box-shadow: none;
-/   }
-
-/   @media (min-width: 768px){
-/     .input-group-btn.select-drop-head {
-/       width: 25% !important;
-/     }
-/     .menu_btn_amzonLyout{
-/       background: #eee;
-/       border: 1px solid black;
-/       font-size: 14px;
-/       height: 29px;
-/     }
-/   }
-
